--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "mock-server": "json-server --watch db.json"
+    "mock-server": "json-server --watch db.json --id uuid"
   },
   "private": true,
   "dependencies": {
@@ -23,11 +23,16 @@
     "@angular/platform-browser": "~7.1.1",
     "@angular/platform-browser-dynamic": "~7.1.1",
     "@angular/router": "~7.1.1",
+    "@ngrx/effects": "^7.0.0-beta.1",
+    "@ngrx/router-store": "^7.0.0-beta.1",
+    "@ngrx/store": "^7.0.0-beta.1",
+    "@ngrx/store-devtools": "^7.0.0-beta.1",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "rxjs": "~6.3.3",
     "tachyons": "^4.11.1",
     "tslib": "^1.9.0",
+    "uuid": "^3.3.2",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
@@ -35,9 +40,11 @@
     "@angular/cli": "~7.1.1",
     "@angular/compiler-cli": "~7.1.1",
     "@angular/language-service": "~7.1.1",
+    "@ngrx/schematics": "^6.1.2",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
+    "@types/uuid": "^3.4.4",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
