--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@ngrx/store-devtools": "^7.0.0-beta.1",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
+    "ngrx-store-freeze": "^0.2.4",
     "rxjs": "~6.3.3",
     "tachyons": "^4.11.1",
     "tslib": "^1.9.0",
