--- a/package.json
+++ b/package.json
@@ -8,7 +8,24 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "mock-server": "json-server --watch db.json --id uuid"
+    "mock-server": "json-server --watch db.json --id uuid",
+    "prettify": "prettier --write --single-quote --trailing-comma all \"src/**/*.{ts,scss}\"",
+    "prettify:json": "prettier --write \"src/**/*.json\""
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{ts,scss}": [
+      "prettier --write --single-quote --trailing-comma all",
+      "git add"
+    ],
+    "*.json": [
+      "prettier --write",
+      "git add"
+    ]
   },
   "private": true,
   "dependencies": {
@@ -47,6 +64,7 @@
     "@types/node": "~8.9.4",
     "@types/uuid": "^3.4.4",
     "codelyzer": "~4.5.0",
+    "husky": "^1.2.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "json-server": "^0.14.0",
@@ -55,6 +73,8 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "lint-staged": "^8.1.0",
+    "prettier": "^1.15.3",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
