--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "codelyzer": "~4.5.0",
     "husky": "^1.2.0",
     "jasmine-core": "~2.99.1",
+    "jasmine-marbles": "^0.4.1",
     "jasmine-spec-reporter": "~4.2.1",
     "jest": "^23.6.0",
     "jest-preset-angular": "^6.0.2",
