--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:ci": "jest --runInBand",
+    "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "mock-server": "json-server --watch db.json --id uuid",
@@ -27,12 +25,6 @@
     "*.json": [
       "prettier --write",
       "git add"
-    ]
-  },
-  "jest": {
-    "preset": "jest-preset-angular",
-    "setupFilesAfterEnv": [
-      "<rootDir>/src/jest-setup.ts"
     ]
   },
   "private": true,
@@ -64,14 +56,11 @@
     "@angular/language-service": "~8.2.7",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/jest": "^24.0.18",
     "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
-    "jasmine-marbles": "~0.6.0",
+    "jasmine-marbles": "^0.6.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "jest": "^24.9.0",
-    "jest-preset-angular": "^7.1.1",
     "karma": "~4.1.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
